--- a/Jop-Project/pug/_header.pug
+++ b/Jop-Project/pug/_header.pug
@@ -1,3 +1,35 @@
 header#home
   div.container-fluid
-    
+    nav(class="navbar navbar-expand-lg navbar-dark bg-dark text-center")
+      a(class="navbar-brand hidden-lg" href="#home")
+        h3 Job
+          
+      div(class="collapse navbar-collapse text-center" id="navbarSupportedContent")
+        ul(class="navbar-nav mr-auto")
+          li(class="nav-item active")
+            a(class="nav-link" href="#about") Tech Careers 
+          li(class="nav-item")
+            a(class="nav-link" href="#downloads") Career Explorer 
+          li(class="nav-item")
+            a(class="nav-link" href="#plans") Insights 
+          
+        ul(class="navbar-nav mr-auto")
+          li(class="nav-item")
+            a(class="nav-link" href="#contact") Contact Sales 
+          li(class="nav-item")
+            a(class="nav-link" href="#about") For Employers  
+          li(class="nav-item")
+            a(class="nav-link" href="#downloads") Login/Register
+
+    div(class="w3-sidebar w3-bar-block w3-card w3-animate-left" id="MobileMenu"
+            style="left:0px; display:none; top: 0px;")
+      a(class="w3-bar-item  w3-large closebtn")
+      a(class="nav-link1en nav-link1") Tech Careers 
+      a(class="nav-link1en nav-link1") Career Explorer 
+      a(class="nav-link1en nav-link1") Insights 
+      a(class="nav-link1en nav-link1") Contact Sales
+      a(class="nav-link1en nav-link1") Login/Register
+       
+
+    div(class="text-center header-body")
+      
