--- a/Jop-Project/pug/index.pug
+++ b/Jop-Project/pug/index.pug
@@ -2,11 +2,12 @@ doctype html
 html
   head
     include ./_style.pug
-    title PUG
+    title JOB
   body
     include ./_header.pug
     
-
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
     script(src="dist/js/index.js")
     
 
