--- a/Jop-Project/style/_header.scss
+++ b/Jop-Project/style/_header.scss
@@ -27,10 +27,86 @@
                     color: #576c8c;
                 }
             }
+
+            @media screen and (max-width: 991px) {
+                display: none;
+            }
         }
 
-        #MobileMenu {
+        .sidenav {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
             display: none;
+
+            a {
+                padding: 8px 8px 8px 32px;
+                text-decoration: none;
+                font-size: 20px;
+                color: #576c8c;
+                display: block;
+                transition: 0.3s;
+                text-align: left;
+
+                &:hover {
+                    color: #f1f1f1;
+                }
+            }
+
+            .closebtn {
+                position: absolute;
+                top: 0;
+                right: 20px;
+                font-size: 36px;
+                margin-left: 50px;
+            }
+
+            @media screen and (max-width: 991px) {
+                display: block !important;
+            }
+        }
+
+        .open {
+            @media screen and (max-width: 991px) {
+                display: block !important;
+                padding: 7px;
+                padding-left: 31px;
+                padding-left: 7px;
+                padding-bottom: 0px;
+                padding-top: 0px;
+                left: 10px;
+                top: 10px;  
+                position: fixed;
+                z-index: 100;
+                background-color: #a9a8a8bd;   
+                line-height: 1.5;
+                font-size: 24px !important;                               
+            }
+        }
+
+        @media screen and (max-height: 450px) {
+            .sidenav {
+                padding-top: 15px;
+            }
+
+            .sidenav a {
+                font-size: 18px;
+            }
+        }
+
+        .header-body {
+            .header-image {
+                position: fixed;
+                width: 100%;
+                height: 400px;
+            }
         }
     }
 }
