create feature section

--- a/Jop-Project/pug/_companies.pug
+++ b/Jop-Project/pug/_companies.pug
@@ -1,12 +1,16 @@
 section#companies
     div.container-fluid.row
-        div.companies_header.col-12
-            h4 Top companies on Job Searching
-        div.col-lg-3.text-center
-            img(src="dist/image/dell.png", alt="DEL")
-        div.col-lg-3.text-center
-            img(src="dist/image/dell.png", alt="DEL")
-        div.col-lg-3.text-center
-            img(src="dist/image/dell.png", alt="DEL")
-        div.col-lg-3.text-center
-            img(src="dist/image/dell.png", alt="DEL")
+        div.companies_header.col-10
+            div.most
+                i.fa.fa-building 
+                h4 Top companies on Job Searching
+        div.col-lg-2.text-center.companies-logo
+            img(src="dist/image/dell.png", alt="DEL" class="logo-image")
+        div.col-lg-2.text-center.companies-logo
+            img(src="dist/image/marketo.png", alt="marketo" class="logo-image")
+        div.col-lg-2.text-center.companies-logo
+            img(src="dist/image/Deloitte_black_logo.png", alt="Deloitte_black_logo" class="logo-image")
+        div.col-lg-2.text-center.companies-logo
+            img(src="dist/image/UnitedHealthGroup.png", alt="UnitedHealthGroup" class="logo-image")
+        div.col-lg-2.text-center.companies-logo
+            img(src="dist/image/company-logo.jpg", alt="UnitedHealthGroup" class="logo-image")
