--- a/Jop-Project/style/_companies.scss
+++ b/Jop-Project/style/_companies.scss
@@ -4,10 +4,22 @@
             margin-left: 10%;
             padding-bottom: 20px;
 
-            h4 {
+            .most {
                 color: red;
+                display: -webkit-box;
+                i{
+                    padding-right: 15px;
+                }
             }
         }
+        .companies-logo {
+            .logo-image {
+                width: 82%;
+                height: 69%;
+                margin-left: 90px;                       
+            }
+        }
+
     }
 
     padding: 3% 0%;
