--- a/Jop-Project/pug/index.pug
+++ b/Jop-Project/pug/index.pug
@@ -8,7 +8,7 @@ html
     
     include ./_companies.pug
     include ./_feature.pug
-    //- include ./_footer.pug
+    include ./_footer.pug
     
     
     
