--- a/Jop-Project/pug/_feature.pug
+++ b/Jop-Project/pug/_feature.pug
@@ -1,14 +1,14 @@
 section#competition
     div.container-fluid.row
-        div.competition-image1.col-6
-        div.competition-descraption.col-6
+        div.competition-image1.col-lg-6.col-md-6.col-sm-12
+        div.competition-descraption.col-lg-6.col-md-6.col-sm-12
             h2 Beat your competition
             p We've got answers to all your burning questions on interviews, resumes, networking, and job hunting skills.
             button.career.btn 
                 a(href="#") career toolkit
-        div.competition-descraption.col-6.competition-descraption2
+        div.competition-descraption.col-lg-6.col-md-6.col-sm-12.competition-descraption2
             h2 Know your worth
             p Predict the salary you can earn based on your unique skillset, job title, experience, and location.
             button.salary.btn 
                 a(href="#") Salary Predictor
-        div.competition-image2.col-6
+        div.competition-image2.col-lg-6.col-md-6.col-sm-12
