--- a/Jop-Project/pug/_footer.pug
+++ b/Jop-Project/pug/_footer.pug
@@ -51,25 +51,25 @@ footer#footer
             li Stay Connected
             li 
                 a(href="#") 
-                    i.fa.fa-twitter-square  Twitter
+                    i.fab.fa-twitter-square   Twitter
             li 
                 a(href="#") 
-                    i.fa.fa-instagram  Instagram
+                    i.fab.fa-instagram   Instagram
             li 
                 a(href="#") 
-                    i.fa.fa-youtube  Youtube
+                    i.fab.fa-youtube-square   Youtube
             li 
                 a(href="#") 
-                    i.fa.fa-facebook  Facebook
+                    i.fab.fa-facebook   Facebook
             li 
                 a(href="#") 
-                    i.fa.fa-google-plus  Google Plus
+                    i.fab.fa-google-plus-square   Google Plus
             li 
                 a(href="#") 
-                    i.fa.fa-pinterest  Pinterest
+                    i.fab.fa-pinterest-square   Pinterest
             li 
                 a(href="#") 
-                    i.fa.fa-linkedin  LinkedIn
+                    i.fab.fa-linkedin  LinkedIn
     div.col-lg-2.footer-body.col-md-4.col-sm-6
         ul 
             li Legal
