--- a/Jop-Project/pug/_header.pug
+++ b/Jop-Project/pug/_header.pug
@@ -37,6 +37,6 @@ header#home
         div.form.row.text-center
           div.col-12.text-center.text-header
             h2 Search 78,263 tech jobs. Find yours today.
-          input(type="text" placeholder="Job Title, Skills, Keywords or Company Name" class="col-lg-4")
-          input(type="text" placeholder="Zip Code, City or State" class="col-lg-4")
+          input(type="text" placeholder="Job Title, Skills, Keywords or Company Name" class="col-lg-4 col-md-9 col-sm-9")
+          input(type="text" placeholder="Zip Code, City or State" class="col-lg-4 col-md-9 col-sm-9")
           button.text-center.search-btn.btn Search
