--- a/Jop-Project/style/_companies.scss
+++ b/Jop-Project/style/_companies.scss
@@ -16,7 +16,11 @@
             .logo-image {
                 width: 82%;
                 height: 69%;
-                margin-left: 90px;                       
+                margin-left: 90px;    
+                @media screen and (min-width: 576px) {
+                    width: 41%;
+                    margin-top: 28px;                
+                }                   
             }
         }
 
