--- a/Jop-Project/style/index.scss
+++ b/Jop-Project/style/index.scss
@@ -5,3 +5,18 @@
 body {
     overflow-x: hidden;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1268aa;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3075aa;
+}
