--- a/Jop-Project/style/index.scss
+++ b/Jop-Project/style/index.scss
@@ -1,6 +1,7 @@
 @import './_header';
+@import './job';
 @import './companies';
-@import './_feature.scss';
+@import './_feature';
 @import './_footer';
 body {
     overflow-x: hidden;
