--- a/Jop-Project/pug/index.pug
+++ b/Jop-Project/pug/index.pug
@@ -5,7 +5,7 @@ html
     title JOB
   body
     include ./_header.pug
-    
+    include ./_job.pug
     include ./_companies.pug
     include ./_feature.pug
     include ./_footer.pug
@@ -15,6 +15,8 @@ html
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous")
+    script(src="dist/js/jquery-1.12.1.min.js")
+    script(src="dist/js/accordion-menu.js")
     script(src="dist/js/index.js")
     
 
