--- a/Jop-Project/pug/_job.pug
+++ b/Jop-Project/pug/_job.pug
@@ -43,7 +43,23 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?31" class="link")  
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Children & Youth
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Community Development
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Education
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Health & Medicine
+                li  
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Volunteering
 
             li.li
               div 
@@ -51,7 +67,23 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?41" class="link")  
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   2-Year Degree Required
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   4-Year Degree Required
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Doctorate (PhD) Required
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   High School Diploma Required
+                li  
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   J.D. Required 
 
             li.li
               div 
@@ -59,7 +91,23 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?51" class="link")  
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Entry level
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Executive
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Managerial
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   None specified
+                li  
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Professional
 
             li.li
               div 
@@ -67,7 +115,14 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?61" class="link")  
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Full Time 
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Part Time
 
             li.li
               div 
@@ -75,18 +130,35 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?71" class="link")  
-
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Remote 
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   On-Site
+          
             li.li
               div 
                 p.p Org Type
                     i.fas.fa-plus
               ul
                 li
-                  a(href="?81" class="link")  
-
-
-
-
-
-
+                    input(type="checkbox" name="all" value="all")
+                    |   All
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike") 
+                    |   Consultant
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Government
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Nonprofit
+                li
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Recruiter
+                li  
+                    input(type="checkbox" name="vehicle1" value="Bike")  
+                    |   Social Enterprise  
