--- a/Jop-Project/pug/_job.pug
+++ b/Jop-Project/pug/_job.pug
@@ -1,7 +1,7 @@
 header#job
   div.container-fluid.row
-    div.col-lg-4.job-search
-      div(style="float:left;width:300px;")
+    div.col-lg-3.col-md-3.col-sm-12.job-search
+      div(style="")
         div(id="accordion")
           ul
             li.li
@@ -11,55 +11,59 @@ header#job
               ul
                 li
                   a(href="?11" class="") 
-                    input(type="text" placeholder="Enter Your Location to search")
-                        
+                    input(type="text" class="location" placeholder="Enter Your Location to search")
             li.li
               div 
                 p.p Job Function
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Administrative
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Advocacy
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Community Engagement/Outreach
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Development/Fundraising
-                li  
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Program Management
-
+                  a(href="?21" class="") 
+                    ul
+                        li
+                            input(type="checkbox" name="all" value="all")
+                            |   All
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike") 
+                            |   Administrative
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Advocacy
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Community Engagement/Outreach
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Development/Fundraising
+                        li  
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Program Management
             li.li
               div 
                 p.p Issue Areas
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Children & Youth
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Community Development
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Education
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Health & Medicine
-                li  
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Volunteering
+                  a(href="?31" class="") 
+                    ul
+                        li
+                            input(type="checkbox" name="all" value="all")
+                            |   All
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike") 
+                            |   Children & Youth
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Community Development
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Education
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Health & Medicine
+                        li  
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Volunteering
 
             li.li
               div 
@@ -67,23 +71,26 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   2-Year Degree Required
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   4-Year Degree Required
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Doctorate (PhD) Required
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   High School Diploma Required
-                li  
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   J.D. Required 
+                   a(href="?41" class="") 
+                        ul
+                            li
+                                input(type="checkbox" name="all" value="all")
+                                |   All
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike") 
+                                |   2-Year Degree Required
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   4-Year Degree Required
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   Doctorate (PhD) Required
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   High School Diploma Required
+                            li  
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   J.D. Required 
 
             li.li
               div 
@@ -91,23 +98,26 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Entry level
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Executive
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Managerial
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   None specified
-                li  
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Professional
+                    a(href="?51" class="") 
+                        ul
+                            li
+                                input(type="checkbox" name="all" value="all")
+                                |   All
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike") 
+                                |   Entry level
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   Executive
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   Managerial
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   None specified
+                            li  
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   Professional
 
             li.li
               div 
@@ -115,14 +125,17 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Full Time 
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Part Time
+                    a(href="?61" class="") 
+                        ul 
+                            li
+                                input(type="checkbox" name="all" value="all")
+                                |   All
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike") 
+                                |   Full Time 
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike") 
+                                |   Part Time
 
             li.li
               div 
@@ -130,14 +143,17 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Remote 
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   On-Site
+                    a(href="?71" class="") 
+                        ul 
+                            li
+                                input(type="checkbox" name="all" value="all")
+                                |   All
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike") 
+                                |   Remote 
+                            li
+                                input(type="checkbox" name="vehicle1" value="Bike")  
+                                |   On-Site
           
             li.li
               div 
@@ -145,20 +161,83 @@ header#job
                     i.fas.fa-plus
               ul
                 li
-                    input(type="checkbox" name="all" value="all")
-                    |   All
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike") 
-                    |   Consultant
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Government
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Nonprofit
-                li
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Recruiter
-                li  
-                    input(type="checkbox" name="vehicle1" value="Bike")  
-                    |   Social Enterprise  
+                    a(href="?18" class="") 
+                        ul
+                            li
+                            input(type="checkbox" name="all" value="all")
+                            |   All
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike") 
+                            |   Consultant
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Government
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Nonprofit
+                        li
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Recruiter
+                        li  
+                            input(type="checkbox" name="vehicle1" value="Bike")  
+                            |   Social Enterprise  
+      
+    div.col-lg-8.col-md-8.col-sm-12.job-body
+        div.row 
+            div.col-lg-12.job-find-header
+                p.number 7,614 jobs found
+                a(href="#" class="alert")
+                    i.far.fa-bell         Create an Email Alert
+            div.find-job.col-lg-12
+                div.row
+                    div.job-header.col-12
+                        div.left 
+                            i.fas.fa-briefcase    JOB
+                        div.save 
+                            i.fas.fa-heart    SAVE
+                    div.job-title.col-12
+                        h4 Vacancy for Data entry clerk
+                    div.job-location.col-12
+                        h5 Mercy Ships Organization | Los Angeles, CA
+                    div.job-descraption.col-12
+                        h6 Posted 2 minutes ago | Full Time | Remote Possible
+            div.find-job.col-lg-12
+                div.row
+                    div.job-header.col-12
+                        div.left 
+                            i.fas.fa-briefcase    JOB
+                        div.save 
+                            i.fas.fa-heart    SAVE
+                    div.job-title.col-12
+                        h4 Vacancy for Data entry clerk
+                    div.job-location.col-12
+                        h5 Mercy Ships Organization | Los Angeles, CA
+                    div.job-descraption.col-12
+                        h6 Posted 2 minutes ago | Full Time | Remote Possible
+            div.find-job.col-lg-12
+                div.row
+                    div.job-header.col-12
+                        div.left 
+                            i.fas.fa-briefcase    JOB
+                        div.save 
+                            i.fas.fa-heart    SAVE
+                    div.job-title.col-12
+                        h4 Vacancy for Data entry clerk
+                    div.job-location.col-12
+                        h5 Mercy Ships Organization | Los Angeles, CA
+                    div.job-descraption.col-12
+                        h6 Posted 2 minutes ago | Full Time | Remote Possible
+            div.find-job.col-lg-12
+                div.row
+                    div.job-header.col-12
+                        div.left 
+                            i.fas.fa-briefcase    JOB
+                        div.save 
+                            i.fas.fa-heart    SAVE
+                    div.job-title.col-12
+                        h4 Vacancy for Data entry clerk
+                    div.job-location.col-12
+                        h5 Mercy Ships Organization | Los Angeles, CA
+                    div.job-descraption.col-12
+                        h6 Posted 2 minutes ago | Full Time | Remote Possible
+                    
