--- a/Jop-Project/style/_accordion-menu.scss
+++ b/Jop-Project/style/_accordion-menu.scss
@@ -19,13 +19,13 @@
     padding-top:8px;
     padding-bottom:8px;
 }
-#accordion li li li > a, #accordion li li li > div { padding-left:50px; }
-#accordion li > div{
-    font-family:'Lucida Grande', Geneva, Candara, Tahoma, sans-serif;
-    font-weight:bold;
-    font-size:large;
-    color:black;
-}
+// #accordion li li li > a, #accordion li li li > div { padding-left:50px; }
+// #accordion li > div{
+//     font-family:'Lucida Grande', Geneva, Candara, Tahoma, sans-serif;
+//     font-weight:bold;
+//     font-size:large;
+//     color:black;
+// }
 #accordion .active > div{
     color:#666;
 }
@@ -36,7 +36,10 @@
 	padding: 0;
     margin:0;
     overflow:hidden;
-	cursor: pointer;
+    cursor: pointer;
+    // &:hover {
+    //     color: rgb(248, 232, 232);
+    // }
 }
 #accordion li.top + li.top {
     border-top:0;
