--- a/Jop-Project/style/_job.scss
+++ b/Jop-Project/style/_job.scss
@@ -58,7 +58,7 @@
                 .job-find-header {
                     padding-left: 50px;
                     margin-left: 50px;
-
+                    margin-top: 37px;
                     .number {
                         float: left;
                         color: #7e7c7c;
