--- a/Jop-Project/pug/_job.pug
+++ b/Jop-Project/pug/_job.pug
@@ -240,4 +240,4 @@ header#job
                         h5 Mercy Ships Organization | Los Angeles, CA
                     div.job-descraption.col-12
                         h6 Posted 2 minutes ago | Full Time | Remote Possible
-                    
+            div.btn.btn-primary view more
