--- a/Jop-Project/style/_job.scss
+++ b/Jop-Project/style/_job.scss
@@ -130,6 +130,10 @@
                         margin-top: 20px;
                     }
                 }
+                .btn-primary {
+                    margin-top: 18px;
+                    margin-left: 67px;                
+                }
             }
         }
     }
