--- a/Jop-Project/pug/index.pug
+++ b/Jop-Project/pug/index.pug
@@ -1,14 +1,14 @@
 doctype html
 html
   head
-    include ./_style.pug
+    include ./partials/_style.pug
     title JOB
   body
-    include ./_header.pug
-    include ./_job.pug
-    include ./_companies.pug
-    include ./_feature.pug
-    include ./_footer.pug
+    include ./partials/_header.pug
+    include ./partials/_job.pug
+    include ./partials/_companies.pug
+    include ./partials/_feature.pug
+    include ./partials/_footer.pug
     
     
     
